--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,8 +38,8 @@ const lang = getLangFromUrl(Astro.url);
     <div id="mouse" class="glowing-mouse blur-2xl size-72 rounded-full">
     </div>
   
-		<div class="fixed inset-0 z-[-10] pointer-events-none"> 
-      <div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-100 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(30,30,30,0),rgba(125,189,219,0.6))] dark:bg-neutral-950 dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
+    <div class="fixed inset-0 z-[-10] pointer-events-none"> 
+      <div class="absolute top-0 z-[-2] h-full w-full bg-neutral-100 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(30,30,30,0),rgba(125,189,219,0.6))] dark:bg-neutral-950 dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
       <div class="wave bg-sky-600/25 dark:bg-blue-600/25"></div>
       <div class="wave bg-sky-600/25 dark:bg-blue-600/25"></div>
       <div class="wave bg-sky-600/25 dark:bg-blue-600/25"></div>
