--- a/src/icons/Logo.astro
+++ b/src/icons/Logo.astro
@@ -1,4 +1,4 @@
-<svg width="951px" height="931px" viewBox="0 0 951.000000 931.000000" preserveAspectRatio="xMidYMid meet">
+<svg {...Astro.props} width="951.000000pt" height="931.000000pt" viewBox="0 0 951.000000 931.000000" preserveAspectRatio="xMidYMid meet">
     <defs>
         <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="0%">
             <stop offset="0%" style="stop-color:rgb(39, 18, 118);stop-opacity:1" />
