--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -33,7 +33,7 @@ const t = useTranslations(lang);
 	description="Hire Omar, future graduate by the end of June 2024 in Telecommunication Technologies Engineering at the University of Vigo."
 >
 	<main>
-		<section id="home" class="w-full mx-auto lg:w-[1240px] pt-28">
+		<section id="home" class="mx-auto lg:w-[1240px] pt-28">
 			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid-container grid-rows-4 grid-cols-2 gap-6">
 				<CardBadge 
 					link='https://www.linkedin.com/in/omar-d-l'
