--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -34,7 +34,7 @@ const {
 </time>
 
 
-<div class="grid-experience mt-4 grid-rows-1 grid-cols-3 gap-6">
+<div class="grid-experience mt-4 gap-6">
     <div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover group col-start-1 flex flex-col justify-center gap-y-6 border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 rounded-3xl">
         <span class="text-lg font-semibold text-gray-800/80 dark:text-sky-300 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {title}
