--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -167,8 +167,8 @@ const PROJECTS = [
         title: t('project.title.3'),
         description: t('project.description.3'),
         image: '/project_images/MintAPI.webp',
-        git: 'https://github.com/omardl/Mint-NFTs-API--GETT-UVigo--',
-        readme: 'https://github.com/omardl/Mint-NFTs-API--GETT-UVigo--/blob/master/README.md',
+        git: 'https://github.com/omardl/Mint-NFTs-API--GETT-UVigo',
+        readme: 'https://github.com/omardl/Mint-NFTs-API--GETT-UVigo/blob/master/README.md',
         position_text: 'col-start-2',
         position_image: 'col-start-1',
         tags: [TAGS.Angular, TAGS.Solidity],
@@ -178,8 +178,8 @@ const PROJECTS = [
         title: t('project.title.4'),
         description: t('project.description.4'),
         image: '/project_images/NodeSec.webp',
-        git: 'https://github.com/omardl/NodeSec---Capacity-control-system-based-on-blockchain',
-        readme: 'https://github.com/omardl/NodeSec---Capacity-control-system-based-on-blockchain/blob/main/README.md',
+        git: 'https://github.com/omardl/NodeSec---Capacity-control-system-based-on-blockchain--GET-UVigo',
+        readme: 'https://github.com/omardl/NodeSec---Capacity-control-system-based-on-blockchain--GET-UVigo/blob/main/README.md',
         position_text: 'col-start-1',
         position_image: 'col-start-2',
         tags: [TAGS.Arduino, TAGS.MongoDB, TAGS.NFC, TAGS.NodeRed, TAGS.Python, TAGS.SpringBoot, TAGS.TensorFlow],
@@ -189,8 +189,8 @@ const PROJECTS = [
         title: t('project.title.5'),
         description: t('project.description.5'),
         image: '/project_images/sunBoat.webp',
-        git: 'https://github.com/omardl/Sun-boat--RSFM-GETT-UVigo',
-        readme: 'https://github.com/omardl/Design-and-configuration-of-the-communications-arquitecture-and-protocols-for-a-sun-boat./blob/main/README.md',
+        git: 'https://github.com/omardl/Sun-boat---Design-and-configuration-of-the-communications-arquitecture-and-protocols--GETT-UVigo',
+        readme: 'https://github.com/omardl/Sun-boat---Design-and-configuration-of-the-communications-arquitecture-and-protocols--GETT-UVigo/blob/main/README.md',
         position_text: 'col-start-2',
         position_image: 'col-start-1',
         tags: [TAGS.Arduino, TAGS.Docker, TAGS.Jira, TAGS.MongoDB, TAGS.Mosquitto, TAGS.NodeRed, TAGS.Python],
@@ -200,8 +200,8 @@ const PROJECTS = [
         title: t('project.title.6'),
         description: t('project.description.6'),
         image: '/project_images/REST_API.webp',
-        readme: 'https://github.com/omardl/REST-API-web-shop--GETT-UVigo-/blob/main/README.md',
-        git: 'https://github.com/omardl/REST-API-web-shop--GETT-UVigo-',
+        readme: 'https://github.com/omardl/REST-API-webshop--GETT-UVigo/blob/main/README.md',
+        git: 'https://github.com/omardl/REST-API-webshop--GETT-UVigo',
         position_text: 'col-start-1',
         position_image: 'col-start-2',
         tags: [TAGS.Angular, TAGS.MongoDB, TAGS.NodeJS],
@@ -210,15 +210,16 @@ const PROJECTS = [
 ]
 
 ---
-<div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover grid-cols-[1240px] grid-rows-[300px] p-6 rounded-3xl">
-    <span class="row-start-1 col-start-1 col-span-2 text-md font-semibold text-pretty text-gray-800/80 dark:text-sky-300">
+<div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover w-[1240px] p-6 rounded-3xl">
+    <span class="row-start-1 col-start-1 text-2xl font-semibold text-pretty text-gray-800/80 dark:text-sky-300">
         {t('projects.description')}
     </span>
 </div>
+
 {
     PROJECTS.map(project => (
     
-        <div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover grid-projects grid-rows-2 p-6 my-12 grid-cols-2 gap-6 border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 rounded-3xl">
+        <div class="grid-projects w-[1240px] shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover p-6 my-12 gap-6 border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 rounded-3xl">
             <div class="row-start-1 col-start-1 col-span-2 flex items-center justify-center">
                 <span class="row-start-1 col-start-1 col-span-2 text-2xl font-semibold text-gray-800/80 underline dark:text-sky-300">
                     {project.title}
