--- a/src/icons/Books.astro
+++ b/src/icons/Books.astro
@@ -1,4 +1,4 @@
-<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" width="px" height="0px" viewBox="0 0 12 12" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="4">
+<svg {...Astro.props} xmlns="http://www.w3.org/2000/svg" width="12" height="012" viewBox="0 0 12 12" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="4">
 
         <path d="M 5 5 C 5 4.445312 5.445312 4 6 4 L 8 4 C 8.554688 4 9 4.445312 9 5 L 9 19 C 9 19.554688 8.554688 20 8 20 L 6 20 C 5.445312 20 5 19.554688 5 19 Z M 5 5 " transform="matrix(0.5,0,0,0.5,0,0)"/>
         <path d="M 9 5 C 9 4.445312 9.445312 4 10 4 L 12 4 C 12.554688 4 13 4.445312 13 5 L 13 19 C 13 19.554688 12.554688 20 12 20 L 10 20 C 9.445312 20 9 19.554688 9 19 Z M 9 5 " transform="matrix(0.5,0,0,0.5,0,0)"/>
