--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,8 +32,8 @@ const t = useTranslations(lang);
 	description="Contrata a Omar, futuro graduado para finales de junio de 2024 en Ingeniería de Tecnologías de Telecomunicación en la Universidad de Vigo."
 >
 	<main>
-		<section id="home" class="mx-auto lg:w-[1240px] pt-28 ">
-			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-rows-[75px_250px_100px_50px] grid-cols-[280px_194px_196px_194px_280px] gap-6">
+		<section id="home" class="mx-auto lg:w-[1240px] pt-28">
+			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-cols-[280px_194px_196px_194px_280px] grid-rows-[75px_250px_100px_50px] gap-6">
 				<CardBadge 
 					link='https://www.linkedin.com/in/omar-d-l'
 				/>
@@ -73,11 +73,13 @@ const t = useTranslations(lang);
 		</section>
 
 		<section id="education" class="w-full mx-auto lg:w-[1240px] pt-24">
-			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
-				<BooksIcon class="size-8"/>
-				{t('nav.education')}
-			</h2>
-			<Learning />
+			
+				<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
+					<BooksIcon class="size-8"/>
+					{t('nav.education')}
+				</h2>
+				<Learning />
+			
 		</section>
 
 		<section id="experience" class="w-full mx-auto lg:w-[1240px] pt-24">
