footer margin arrangement

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<footer class="rounded-lg w-[1240px] m-4 flex flex-col items-center justify-evenly text-gray-900/80 dark:text-white/80 font-semibold">
+<footer class="rounded-lg w-[1240px] mx-auto m-4 flex flex-col items-center justify-evenly text-gray-900/80 dark:text-white/80 font-semibold">
     <div class="w-full mx-auto max-w-screen-xl pt-2 flex flex-row items-center justify-center gap-x-2">
         <span>
             {t('footer.text1')} 
