--- a/src/components/CardSpan2.astro
+++ b/src/components/CardSpan2.astro
@@ -1,5 +1,5 @@
-<div id="particles-js" class="overflow-hidden shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover row-start-3 col-start-4 flex justify-center items-center border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 rounded-3xl">
+<div class="shadow-grid-mini overflow-clip hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover row-start-4 lg:row-start-3 col-start-1 lg:col-start-4 col-span-1 xl:col-start-8 xl:col-span-2 hidden lg:flex justify-center items-center border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 rounded-3xl">
 
-    <img src="/laptop.webp" alt="Second card span image Home section" class="size-full">
+    <img src="/laptop.webp" alt="Second card span image Home section" class="object-cover">
 
 </div>
