--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -49,9 +49,7 @@ const t = useTranslations(lang);
 				
 				<CardLink />
 
-				<CardLocation 
-					img='/Vigo.webp'
-				/>
+				<CardLocation />
 
 				<CardProfilePhoto 
 					img='/me.webp'
