--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,6 +1,6 @@
 <span class="relative inline-flex h-full w-full overflow-hidden rounded-full p-0.5" >
     <span class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] duration-1000 bg-[conic-gradient(from_90deg_at_50%_50%,#55bff2_0%,#006ba8_50%,#55bff2_100%)] dark:bg-[conic-gradient(from_90deg_at_50%_50%,#51a9e4_0%,#214255_50%,#51a9e4_100%)]" />
-    <div class="inline-flex items-center justify-center w-full px-3 py-1 font-semibold text-black/80 duration-1000 dark:text-sky-600 bg-sky-300/80 dark:bg-[#0f0f0f] rounded-full cursor-pointer backdrop-blur-3xl whitespace-nowrap">
+    <div class="inline-flex items-center justify-center w-full px-1 md:px-3 py-1 text-[8px] md:text-base md:font-semibold text-black/80 duration-1000 dark:text-sky-600 bg-sky-300/80 dark:bg-[#0f0f0f] rounded-full cursor-pointer backdrop-blur-3xl whitespace-nowrap">
         <slot />
     </div>
 </span>
