--- a/src/components/CardLocation.astro
+++ b/src/components/CardLocation.astro
@@ -1,25 +1,35 @@
----
-interface Props {
-    img: string;
-}
-
-const { img } = Astro.props;
----
-<div class="shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover pb-2 col-start-5 row-start-1 row-span-4 rounded-3xl overflow-hidden transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}');`}>
-    <div class="flex flex-row items-center justify-center gap-x-5">
+<div class="shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover pb-2 col-start-1 lg:col-start-5 col-span-2 xl:col-span-3 row-start-6 md:row-start-4 lg:row-start-1 row-span-1 lg:row-span-4 xl:col-start-10 rounded-3xl overflow-hidden transition-transform duration-300 hover:scale-105 bg-center small-size-view lg:bg-top">
+    <div class="flex flex-row lg:justify-center ml-[20px] gap-x-5">
         
         <div class="flex flex-col items-center justify-center">
-            <div class="size-7 mt-2 rounded-t-full rounded-br-full bg-[#dc2626] -rotate-45 z-20 after:absolute after:size-3 after:rounded-full after:bg-slate-400 after:m-2">
+            <div class="size-7 mt-2 rounded-t-full rounded-br-full bg-[#15222E] lg:bg-[#dc2626] -rotate-45 z-20 after:absolute after:size-3 after:rounded-full after:bg-slate-400 after:m-2">
             </div>
                
-            <div class="rounded-full size-3 bg-slate-400 [transform:rotateX(55deg)] z-10 pulse after:absolute after:size-10 after:rounded-full after:shadow-location-pulse after:-inset-x-[14px] after:-inset-y-[14px] after:animate-[pulsate_1s_ease-out_infinite]">
+            <div class="rounded-full size-3 bg-slate-400 [transform:rotateX(55deg)] z-10 pulse text-[#15222E] lg:text-[#dc2626] after:absolute after:size-10 after:rounded-full after:shadow-location-pulse after:-inset-x-[14px] after:-inset-y-[14px] after:animate-[pulsate_1s_ease-out_infinite]">
             </div>
         </div>
         
         <div class="mt-3">
-            <h5 class="text-lg font-semibold text-[#dc2626]">
+            <h5 class="text-xl lg:text-lg font-bold lg:font-semibold text-[#15222E] lg:text-[#dc2626]">
                 Vigo, Pontevedra
             </h5>
         </div>
+
     </div>
 </div>
+
+<style>
+    
+    .small-size-view {
+        background-image:url('/VigoHorizontalView.webp');
+        background-position: center;
+    }
+
+    
+    @media (min-width: 1024px) { 
+        .small-size-view {
+            background-image: url('/Vigo.webp');
+        }
+    }
+
+</style>
