--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -34,7 +34,7 @@ const {
 </time>
 
 
-<div class="grid-experience mt-4 gap-6">
+<div class="grid grid-cols-1 lg:grid-cols-2 grid-rows-[240px_240px] lg:grid-rows-[240px] mt-4 gap-6">
     <div class="shadow-grid-mini hover:shadow-grid-hover-mini dark:shadow-grid hover:dark:shadow-grid-hover group col-start-1 flex flex-col justify-center gap-y-6 border-[1px] border-[#212121] hover:border-blue-800 hover:dark:border-sky-400 backdrop-blur-sm bg-opacity-40 rounded-3xl">
         <span class="text-lg font-semibold text-gray-800/80 dark:text-sky-300 mt-1 mx-4 text-pretty group-hover:mx-6 duration-300">
             {title}
@@ -44,7 +44,7 @@ const {
         </span>
     </div>
 
-    <a href={web} class="shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover group overflow-hidden relative flex items-end col-start-2 border-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size: cover;`}  target="_blank" rel="noopener noreferrer">
+    <a href={web} class="shadow-grid-mini hover:shadow-none dark:shadow-grid hover:dark:shadow-grid-hover group overflow-hidden relative flex items-end row-start-2 lg:row-start-1 lg:col-start-2 border-[#212121] rounded-3xl transition-transform duration-300 hover:scale-105" style={`background-image: url('${img}'); background-size: cover;`}  target="_blank" rel="noopener noreferrer">
         <span class="absolute flex items-center justify-center size-6 ml-3 mb-1 rounded-full bg-sky-300 dark:bg-[#080c1c] animate-[tilt_1s_ease-in-out_infinite_alternate]">
             <InfoItem class="size-5 text-[#080c1c] dark:text-sky-300"/>
         </span>
