--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro'
 
 import AboutMe from '../components/AboutMe.astro'
 import CardContact from '../components/CardContact.astro'
+import CardContactMini from '../components/CardContactMini.astro'
 import CardProfilePhoto from '../components/CardProfilePhoto.astro'
 import CardLink from '../components/CardLink.astro'
 import CardSpan from '../components/CardSpan.astro'
@@ -32,8 +33,8 @@ const t = useTranslations(lang);
 	description="Contrata a Omar, futuro graduado para finales de junio de 2024 en Ingeniería de Tecnologías de Telecomunicación en la Universidad de Vigo."
 >
 	<main>
-		<section id="home" class="mx-auto lg:w-[1240px] pt-28">
-			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-cols-[280px_194px_196px_194px_280px] grid-rows-[75px_250px_100px_50px] gap-6">
+		<section id="home" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-28">
+			<div class="animate-fade-left animate-ease-linear animate-duration-500 grid grid-cols-2 md:grid-cols-[273px_198px_198px] lg:grid-cols-[250px_130px_130px_130px_250px] xl:grid-cols-12 grid-rows-[75px_180px_50px_85px_50px_120px] sm:grid-rows-[75px_250px_50px_85px_50px_120px] md:grid-rows-[75px_225px_75px_120px_40px] lg:grid-rows-[75px_250px_100px_50px] gap-3 xl:gap-6">
 				<CardBadge 
 					link='https://www.linkedin.com/in/omar-d-l'
 				/>
@@ -44,13 +45,13 @@ const t = useTranslations(lang);
 
 				<CardContact />
 
+				<CardContactMini />
+
 				<CardLanguage />
 				
 				<CardLink />
 
-				<CardLocation 
-					img='/Vigo.webp'
-				/>
+				<CardLocation />
 
 				<CardProfilePhoto 
 					img='/me.webp'
@@ -63,7 +64,7 @@ const t = useTranslations(lang);
 				/>	
 				
 			</div>
-			<a href="#education">
+			<a href="#education" class="hidden xl:flex">
 				<div class="-mt-2 absolute flex justify-center bottom-1rem left-1/2 mr-2 w-6 h-10 px-2 py-3 border border-2 border-[#212121] dark:border-white rounded-full opacity-75">
 					<div class="rounded-full mt-[0.5px] bg-[#212121] dark:bg-white w-[3px] h-[5px] scroll-animation">
 					</div>
@@ -72,7 +73,7 @@ const t = useTranslations(lang);
 			
 		</section>
 
-		<section id="education" class="w-full mx-auto lg:w-[1240px] pt-24">
+		<section id="education" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-24">
 			
 				<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
 					<BooksIcon class="size-8"/>
@@ -82,7 +83,7 @@ const t = useTranslations(lang);
 			
 		</section>
 
-		<section id="experience" class="w-full mx-auto lg:w-[1240px] pt-24">
+		<section id="experience" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-24">
 			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
 				<ExperienceIcon class="size-8"/>
 				{t('nav.experience')}
@@ -91,7 +92,7 @@ const t = useTranslations(lang);
 			<Experiencie />
 		</section>
 
-		<section id="projects" class="w-full mx-auto lg:w-[1240px] pt-24">
+		<section id="projects" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-24">
 			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
 				<ProjectsIcon class="size-8"/>
 				{t('nav.projects')}
@@ -100,7 +101,7 @@ const t = useTranslations(lang);
 			<Projects />
 		</section>
 
-		<section id="aboutme" class="w-full mx-auto lg:w-[1240px] pt-24">
+		<section id="aboutme" class="mx-auto w-17/20 md:w-[700px] lg:w-[980px] xl:w-[1240px] 2xl:w-17/20 pt-24">
 			<h2 class="text-3xl text-gray-800/80 dark:text-sky-300/80 duration-1000 font-semibold mb-5 flex gap-x-2 items-center">
 				<AboutMeIcon class="size-8"/>
 				{t('nav.aboutme')}
